# flutterbug

./: .gitignore  Makefile  package.json  pyproject.toml  readme.md  tsconfig.json
.github/workflows/: ci.yml
src/asyncglk-client/: entry.js  play.ts  play2.ts
src/flutterbug_server/: __init__.py  app.py  blorb.py  cli.py  metadata.py  protocol.py  room.py  snapshot.py
src/flutterbug_server/static/: asyncglk-smoke.html  asyncglk-test.html  fonts.css  glkote.css  namedialog.js  playws-asyncglk.js  playws.js  theme-base-dark.css  theme-base-light.css  theme-base.css  theme-flutterbug.css  theme-nerd-moth.css  theme-nocturne.css  theme-parchment-dark.css  theme-redrum.css
src/flutterbug_server/templates/: main.html  play.html  play2.html
tests/: _fakes.py
tests/asgi/: conftest.py  test_routes.py  test_websocket.py
tests/integration/: conftest.py  test_room.py
tests/unit/: test_app.py  test_blorb.py  test_cli.py  test_gameread.py  test_metadata.py  test_room.py  test_snapshot.py
windows/: flutterbug-cloudflare.bat  flutterbug-install.bat  flutterbug-solo.bat  flutterbug-tunnel.bat  readme.txt
